[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jpmorgan-chase-stock-data-visualization"
version = "0.1.0"
description = "A Preswald application for visualizing all time JPMorgan Chase Stock Data 1980 - 2025."
requires-python = ">=3.8"
dependencies = [
    "preswald"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3